# risk-analyzer-2026

./: .env.example  .gitignore  ARCHITECTURAL_PLAN.md  BACKEND_REFACTOR_PLAN.md  Dockerfile  KEYWORD_EXTRACTION_COMPARISON.md  KNOWLEDGE_GRAPH_README.md  PHASE2_COMPLETE.md  PHASE2_TASK2.1_SUMMARY.md  PHASE2_TASK2.2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_QUICK_REFERENCE.md  PHASE3_TASKS_3.3-3.5_SUMMARY.md  PHASE3_TASK_3.6_SUMMARY.md  QUICK_START.md  ROUTES_REORGANIZED.md  TASKS_1.5-1.7_SUMMARY.md  TASK_2.2_FIXES.md  TASK_2.2_LOCAL_ONLY.md  TASK_2.2_QUICKSTART.md  TASK_4_1_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  test_metadata_extraction.sh
backend/: CONFIG.md  (+4 more)
python-backend/: .env.example  .gitignore  .zed  DOCUMENT_REGISTRY_README.md  Dockerfile  README.md  check_redis_doc.py  debug_redis.py  pyproject.toml  pytest.ini  requirements.txt  test_chunking.py  test_enriched_chunking.py  test_parse.py  test_quick.py
python-backend/app/: __init__.py  config.py  main.py  models.py  models_compute.py  test_chunker.py  test_parse_pdf.py  test_redis.py
python-backend/benchmarking_testing/: beir_benchmark.py
python-backend/data_crawler/: unreal_engine_scraper.py
python-backend/old/: README.md  compare.py  compare_results.py  main.py  requirements.txt  setup.sh  simple_extractor.py
python-backend/output/: 114-the-art-of-software-testing-3-edition_first20pages.json  114-the-art-of-software-testing-3-edition_first20pages.txt  chunked_114-the-art-of-software-testing-3-edition_first20pages.json  chunked_114-the-art-of-software-testing-3-edition_first20pages.txt
(+140 files in other folders)
