[project]
name = "risk-analyzer-python-backend"
version = "0.1.0"
description = "Document Processing Microservice for Risk Analyzer"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "docling",
    "llama-index-core",
    "chromadb",
    "sentence-transformers",
    "yake",
    "httpx",
    "python-dotenv",
]
